syntax = "proto3";

package greet;
option go_package="/greetpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message LogGreetResponse {
  string result = 1;
}

message GreetEveryoneRequest {
  Greeting greeting = 1;
}

message GreetEveryoneResponse {
  string result = 1;
}

message GreetWithDeadlineRequest {
  Greeting greeting = 1;
}

message GreetWithDeadlineResponse {
  string result = 1;
}

service GreetService{
  // Unary RPC.
  rpc Greet(GreetRequest) returns (GreetResponse){};

  // Server Streaming RPC.
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){};

  // Client Streaming RPC.
  rpc LongGreet(stream LongGreetRequest) returns (LogGreetResponse) {};

  // Bi-directional Streaming RPC.
  rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

  // Deadline example.
  rpc GreetWithDeadline(GreetWithDeadlineRequest) returns (GreetWithDeadlineResponse) {};
}